# QualvoSec

./: README.md
packaging/: CMakeLists.txt  CMakeLists.txt_arm64  CMakeLists.txt_riscv64  deb_changelog.txt  packaging.sh  postinst  rpm_changelog.txt
packaging/admin/: CMakeLists.txt  deb_changelog.txt  packaging.sh  rpm_changelog.txt
packaging/client/: CMakeLists.txt  CMakeLists.txt_arm64  rpm_changelog.txt
packaging/server/: CMakeLists.txt  CMakeLists.txt_arm64  CMakeLists.txt_riscv64  README.md  deb_changelog.txt  postinst  rpm_changelog.txt
src/admin/: README.md  qualvosec_admin  qualvosec_admin.conf
src/client/: qualvosec  qualvosec.conf
src/server/: patch.yaml  qualvosec_server  qualvosec_server.conf
sudoers.d/: qualvosec
systemd/client/: qualvosec.service
systemd/server/: qualvosec_server.service
